--- a/CustomerPreferenceCentre/CustomerPreferenceCentre.Tests/CustomerPreferenceCentre.Tests.csproj
+++ b/CustomerPreferenceCentre/CustomerPreferenceCentre.Tests/CustomerPreferenceCentre.Tests.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="Controllers\SavePreferencesControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
