--- a/CustomerPreferenceCentre/CustomerPreferenceCentre/CustomerPreferenceCentre.csproj
+++ b/CustomerPreferenceCentre/CustomerPreferenceCentre/CustomerPreferenceCentre.csproj
@@ -78,6 +78,7 @@
     <Folder Include="Models\" />
     <Folder Include="Scripts\" />
     <Folder Include="Views\input\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeController.cs" />
@@ -88,6 +89,9 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\InputController.cs" />
     <Compile Include="Controllers\SavePreferencesController.cs" />
+    <Compile Include="Models\UserModel.cs" />
+    <Compile Include="Models\PreferenceModel.cs" />
+    <Compile Include="Interfaces\IPreferenceModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config" />
